<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail">Details</string>

    <string name="action_refresh" translatable="false">Refresh</string>

    <string name="movie_db_api_key" translatable="false">9426e5f190c68f947f6d8768a8cc04e8</string>
    <string name="pref_default_vod_type" translatable="false">movie</string>
    <string name="pref_default_search_type" translatable="false">popular</string>

    <string name="pref_vod_type_movie" translatable="false">movie</string>
    <string name="pref_vod_type_tv_show" translatable="false">tv</string>

    <string name="pref_search_query_latest" translatable="false">latest</string>
    <string name="pref_search_query_popular" translatable="false">popular</string>
    <string name="pref_search_query_my_favorite" translatable="false">My favorite</string>
    <string name="pref_search_query_top_rated" translatable="false">top_rated</string>
    <string name="pref_search_query_favorites">Favorites</string>
    <string name="pref_search_movie_query_now_playing_value" translatable="false">now_playing</string>
    <string name="pref_search_movie_query_upcoming_value" translatable="false">upcoming</string>
    <string name="pref_search_movie_query_now_playing_display" translatable="false">Now playing (MOVIEs only)</string>
    <string name="pref_search_movie_query_upcoming_display" translatable="false">Upcoming (MOVIEs only)</string>
    <string name="pref_search_tv_query_airing_today_value" translatable="false">airing_today</string>
    <string name="pref_search_tv_query_airing_today_display" translatable="false">Airing today (TVs only)</string>
    <string name="pref_search_tv_query_on_the_air_value" translatable="false">on_the_air</string>
    <string name="pref_search_tv_query_on_the_air_display" translatable="false">On the air (TVs only)</string>

    <string name="settings_vod_type_label">Vod type</string>
    <string name="settings_vod_type_key">Select vod type</string>

    <string name="settings_search_type_label">Search type</string>
    <string name="settings_search_type_key">Select query type</string>

    <string name="image_poster_size_small" translatable="false">w92</string>
    <string name="image_poster_size_medium" translatable="false">w500</string>
    <string name="image_poster_size_large" translatable="false">original</string>

    <!--Detail titles-->
    <string name="detail_title_original_title">Original title</string>
    <string name="detail_title_plot">Plot</string>
    <string name="detail_title_rating">IMDB rating</string>
    <string name="detail_title_release_date">Release date</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="youtube_icon_size_small">youtube icon size small</string>
    <string name="trailers">Trailers:</string>
    <string name="no_trailers_for_this_vod">No trailers for this VOD…</string>

    <integer name="main_fragment_gridview_numColumns_horizontal">3</integer>
    <integer name="main_fragment_gridview_numColumns_vertical">2</integer>


    <!--favorites-->
    <string name="favorites_movies">favorites movies</string>
    <string name="favorites_tvs">favorites tv shows</string>


</resources>